# PatchUtils

./: .clang-format  .gitignore  LICENSE  README.md  meson.build
src/: meson.build
src/apps/: create_patch.c  split_patch.c  update_patch.c
src/libs/git/: git.c  git.h
src/libs/patch/: patch.c  patch.h
src/libs/ui/: ui.c  ui.h
src/libs/util/: util.c  util.h
